@@ -452,6 +452,9 @@ typedef struct sc {
 	/* The function we're going to run. */
     int toggle;
 	/* If a toggle, what we're toggling. */
+    int ordinal;
+	/* The how-manieth toggle this is, in order to be able to
+	 * keep them in sequence. */
     struct sc *next;
 	/* Next in the list. */
 } sc;
